# langgraph-agent-templates

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  langgraph.json  pyproject.toml
apps/rag_agent/: .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
apps/rag_agent/src/rag_agent/: __init__.py  graph.py  sample_docs.json  server.py
apps/rag_agent/src/rag_agent/utils/: __init__.py  nodes.py  prompts.py  state.py  tools.py
apps/rag_agent/tests/: test_graph_smoke.py
apps/react_agent/: .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
apps/react_agent/src/react_agent/: __init__.py  graph.py  server.py  state.py
apps/react_agent/src/react_agent/utils/: __init__.py  nodes.py  prompts.py  state.py  tools.py
apps/react_agent/tests/: test_graph_smoke.py
k8s/: namespace.yaml
k8s/rag-agent/: deployment.yaml  ingress.yaml  service.yaml
k8s/react-agent/: deployment.yaml  ingress.yaml  service.yaml
